tests/baselines/reference/parserErrorRecovery_Expression1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Expressions/parserErrorRecovery_Expression1.ts(1,10): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Expressions/parserErrorRecovery_Expression1.ts (1 errors) ====
    var v = ()({});
             ~
!!! error TS1109: Expression expected.